# hud-trace-explorer

./: .gitignore  Dockerfile.hud  README.md  env.py  local_test.py  pyproject.toml  qa_alignment_subagents.py  qa_common.py  qa_context_preparer.py  qa_failure_analysis.py  qa_false_negative.py  qa_false_positive.py  qa_prompt_alignment.py  qa_reward_hacking.py  qa_verification.py  remote_test.py
.hud/: config.json  deploy.json
